@@ -1,0 +1,8 @@
+CORE
+property_port1.sv
+
+^EXIT=0$
+^SIGNAL=0$
+--
+^warning: ignoring
+--
